basic routing and page

--- a/src/i18n/locales/en/header.json
+++ b/src/i18n/locales/en/header.json
@@ -1,10 +1,37 @@
 {
   "home": "Home",
   "about": "About WCG",
+  "companyNews": "Company News",
+  "corporateResponsibility": "Corporate Responsibility",
+  "questions": "Questions",
+  "announcements": "Announcements",
+  "contactUs": "Contact Us",
   "products": "Products",
+  "forex": "Forex",
+  "preciousMetals": "Precious Metals",
+  "crudeOil": "Crude Oil",
+  "index": "Index",
+  "uSShareCFD": "US Share CFD",
+  "cryptocurrencies": "Cryptocurrencies",
   "platform": "Platform",
+  "MT4Overview": "MT4 Overview",
+  "MT4PCDownload": "MT4 PC Download",
+  "MT4APPDownload": "MT4 APP Download",
+  "MAMSystem": "MAM System",
   "notice": "Notice",
-  "learnTrade": "Learn trade",
-  "marketNews": "Market news",
-  "partner": "Partner"
+  "abnormalTrade": "Abnormal Trade",
+  "tradeDetails": "Trade Details",
+  "learnTrade": "Learn Trade",
+  "basicTrading": "BasicTrading",
+  "intermediateTrading": "IntermediateTrading",
+  "advancedTrading": "AdvancedTrading",
+  "marketNews": "Market News",
+  "financialCalendar": "Financial Calendar",
+  "financialNews": "Financial News",
+  "marketAnalysis": "Market Analysis",
+  "partner": "Partner",
+  "fundManager": "Fund Manager",
+  "iBBroker": "IB Broker",
+  "regionalRepresentative": "Regional Representative",
+  "whiteLabelCooperation": "White Label Cooperation"
 }
