--- a/src/i18n/locales/hk/header.json
+++ b/src/i18n/locales/hk/header.json
@@ -1,10 +1,37 @@
 {
   "home": "WCG首頁",
   "about": "關於WCG",
+  "companyNews": "企業動向",
+  "corporateResponsibility": "企業責任",
+  "questions": "常見問題",
+  "announcements": "平台公告",
+  "contactUs": "聯系我們",
   "products": "交易產品",
+  "forex": "外匯",
+  "preciousMetals": "貴金屬",
+  "crudeOil": "原油",
+  "index": "指數",
+  "uSShareCFD": "美股CFD",
+  "cryptocurrencies": "加密貨幣",
   "platform": "交易平台",
+  "MT4Overview": "MT4平台概覽",
+  "MT4PCDownload": "MT4電腦版下載",
+  "MT4APPDownload": "MT4 APP版下載",
+  "MAMSystem": "MAM多帳號管理系統",
   "notice": "交易需知",
+  "abnormalTrade": "異常交易",
+  "tradeDetails": "交易細則",
   "learnTrade": "學習交易",
+  "basicTrading": "初級交易課程",
+  "intermediateTrading": "中級交易課程",
+  "advancedTrading": "高級交易課程",
   "marketNews": "市場資訊",
-  "partner": "成為夥伴"
+  "financialCalendar": "財經日歷",
+  "financialNews": "財經新聞",
+  "marketAnalysis": "市場分析",
+  "partner": "成為夥伴",
+  "fundManager": "基金經理",
+  "iBBroker": "IB代理商",
+  "regionalRepresentative": "區域代表",
+  "whiteLabelCooperation": "白標合作"
 }
