--- a/src/i18n/locales/id/header.json
+++ b/src/i18n/locales/id/header.json
@@ -1,10 +1,37 @@
 {
   "home": "Halaman utama",
   "about": "Tentang WCG",
+  "companyNews": "Berita perusahaan",
+  "corporateResponsibility": "Tanggung jawab perusahaan",
+  "questions": "Berita perusahaan",
+  "announcements": "Pengumuman",
+  "contactUs": "Hubungi kami",
   "products": "Produk",
+  "forex": "Forex",
+  "preciousMetals": "Logam mulia",
+  "crudeOil": "Minyak mentah",
+  "index": "indeks",
+  "uSShareCFD": "US Share CFD",
+  "cryptocurrencies": "Mata uang Crypto",
   "platform": "perdagangan",
+  "MT4Overview": "Tinjauan platform MT4",
+  "MT4PCDownload": "Unduhan versi MT4 PC",
+  "MT4APPDownload": "Unduhan MT4 APP",
+  "MAMSystem": "Sistem manajemen multi-akun MAM",
   "notice": "Perlu diketahui",
+  "abnormalTrade": "Perdagangan Tidak Normal",
+  "tradeDetails": "Detail perdagangan",
   "learnTrade": "belajar",
+  "basicTrading": "Teori Perdagangan Dasar",
+  "intermediateTrading": "Teori Perdagangan Menengah",
+  "advancedTrading": "Teori Perdagangan Lanjutan",
   "marketNews": "Informasi",
-  "partner": "Rekan"
+  "financialCalendar": "Kalender Keuangan",
+  "financialNews": "Berita Keuangan",
+  "marketAnalysis": "Analisis Pasar",
+  "partner": "Rekan",
+  "fundManager": "Manajer Investasi",
+  "iBBroker": "Introducing Broker/ IB",
+  "regionalRepresentative": "Perwakilan daerah",
+  "whiteLabelCooperation": "Kerjasama white label"
 }
