header layout, footer wording

--- a/src/i18n/locales/hk/footer.json
+++ b/src/i18n/locales/hk/footer.json
@@ -1,9 +1,9 @@
 {
   "copyRight": "© WCG Markets Ltd版權所有，不得轉載",
-  "privacypolicy": "隱私條款",
-  "termscondition": "條款細則",
-  "settlement": "爭端處理",
-  "declare": "免責申明",
+  "privacyPolicy": "隱私條款",
+  "termsAndConditions": "條款細則",
+  "disputeSettlement": "爭端處理",
+  "riskDisclaimer": "免責申明",
   "followUs": "關注我們",
   "provideYouWith": "憑藉業內最專業的經驗為您提供優質的投資服務",
   "allTradesInvolveRisks": "所有交易均涉及風險，您的損失可能大於您的入金。請參閲：風險政策。",
