--- a/src/i18n/locales/id/footer.json
+++ b/src/i18n/locales/id/footer.json
@@ -1,9 +1,9 @@
 {
   "copyRight": "© Seluruh hak cipta dilindungi Undang-Undang dan dilarang keras untuk menduplikasi seluruh isi materi di dalamnya",
-  "privacypolicy": "Kebijakan Privasi",
-  "termscondition": "Syarat dan Ketentuan",
-  "settlement": "Penyelesaian Sengketa",
-  "declare": "Penafsiran tentang Risiko",
+  "privacyPolicy": "Kebijakan Privasi",
+  "termsAndConditions": "Syarat dan Ketentuan",
+  "disputeSettlement": "Penyelesaian Sengketa",
+  "riskDisclaimer": "Penafsiran tentang Risiko",
   "followUs": "Ikuti kami",
   "provideYouWith": "Memberi Anda layanan investasi berkualitas tinggi dengan pengalaman paling profesional di industrinya",
   "allTradesInvolveRisks": "Semua perdagangan melibatkan risiko。 Kerugian dalam perdagangan Anda mungkin lebih besar dari total deposit Anda。Kebijakan resiko",
