--- a/src/i18n/locales/cn/footer.json
+++ b/src/i18n/locales/cn/footer.json
@@ -1,9 +1,9 @@
 {
   "copyRight": "© WCG Markets Ltd版权所有，不得转载",
-  "privacypolicy": "隐私条款",
-  "termscondition": "条款细则",
-  "settlement": "争端处理",
-  "declare": "免责申明",
+  "privacyPolicy": "隐私条款",
+  "termsAndConditions": "条款细则",
+  "disputeSettlement": "争端处理",
+  "riskDisclaimer": "免责申明",
   "followUs": "关注我们",
   "provideYouWith": "凭借业内最专业的经验为您提供优质的投资服务",
   "allTradesInvolveRisks": "所有交易均涉及风险，您的损失可能大于您的入金。请参阅：风险政策。",
