--- a/src/i18n/locales/en/footer.json
+++ b/src/i18n/locales/en/footer.json
@@ -1,9 +1,9 @@
 {
   "copyRight": "© WCG All rights reserved， no reprint",
-  "privacypolicy": "Privacy Policy",
-  "termscondition": "Terms and Conditions",
-  "settlement": "Dispute Settlement",
-  "declare": "Risk Disclaimer",
+  "privacyPolicy": "Privacy Policy",
+  "termsAndConditions": "Terms and Conditions",
+  "disputeSettlement": "Dispute disputeSettlement",
+  "riskDisclaimer": "Risk Disclaimer",
   "followUs": "Follow us",
   "provideYouWith": "Provide you with high-quality investment services with the most professional experience inthe industry",
   "allTradesInvolveRisks": "Risk policy: All trades involve risks. Your trading loss may be greater than your total deposit.",
