--- a/src/i18n/locales/cn/common.json
+++ b/src/i18n/locales/cn/common.json
@@ -1,4 +1,8 @@
 {
+  "openRealAccount": "开立真实帐户",
+  "openDemoAccount": "开立模拟帐户",
+  "usersCenter": "客户中心",
+  "iBCenter": "代理中心",
   "contactUs": "联系我们",
   "telegram": "在线客服",
   "online": "online",
