--- a/src/i18n/locales/en/common.json
+++ b/src/i18n/locales/en/common.json
@@ -1,4 +1,8 @@
 {
+  "openRealAccount": "Open Real Account",
+  "openDemoAccount": "Open Demo Account",
+  "usersCenter": "Users' Center",
+  "iBCenter": "IB Center",
   "contactUs": "Contact us",
   "telegram": "Telegram",
   "online": "online",
