--- a/src/i18n/locales/id/common.json
+++ b/src/i18n/locales/id/common.json
@@ -1,4 +1,8 @@
 {
+  "openRealAccount": "Buka akun real",
+  "openDemoAccount": "Buka akun demo",
+  "usersCenter": "Pusat Pengguna",
+  "iBCenter": "Pusat IB",
   "contactUs": "Contact us",
   "telegram": "sambungan layanan",
   "online": "online",
