--- a/src/i18n/locales/my/common.json
+++ b/src/i18n/locales/my/common.json
@@ -1,4 +1,8 @@
 {
+  "openRealAccount": "Buka akaun sebenar",
+  "openDemoAccount": "Pusat Pengguna",
+  "usersCenter": "Pusat pelanggan",
+  "iBCenter": "Pusat Agen",
   "contactUs": "Contact us",
   "telegram": "pelanggan pautan",
   "online": "online",
