--- a/src/i18n/locales/hk/common.json
+++ b/src/i18n/locales/hk/common.json
@@ -1,4 +1,8 @@
 {
+  "openRealAccount": "開立真實賬戶",
+  "openDemoAccount": "開立模擬賬戶",
+  "usersCenter": "客戶中心",
+  "iBCenter": "代理中心",
   "contactUs": "聯繫我們",
   "telegram": "Telegram",
   "online": "線上客服",
