--- a/src/i18n/locales/sa/common.json
+++ b/src/i18n/locales/sa/common.json
@@ -1,4 +1,8 @@
 {
+  "openRealAccount": "افتح حساب حقيقي",
+  "openDemoAccount": "افتح حساب تجريبي",
+  "usersCenter": "مركز المستخدمين",
+  "iBCenter": "مركز الوسطاء المُعرّفين",
   "contactUs": "Contact us",
   "telegram": "Telegram",
   "online": "online",
