--- a/src/i18n/locales/vn/common.json
+++ b/src/i18n/locales/vn/common.json
@@ -1,4 +1,8 @@
 {
+  "openRealAccount": "Mở tài khoản thực",
+  "openDemoAccount": "Mở tài khoản demo",
+  "usersCenter": "Trung tâm khách hàng",
+  "iBCenter": "Trung tâm đại lý",
   "contactUs": "Contact us",
   "telegram": "dịch vụ",
   "online": "online",
