--- a/src/i18n/locales/en/footer.json
+++ b/src/i18n/locales/en/footer.json
@@ -1,5 +1,5 @@
 {
-  "copyRight": "© WCG All rights reserved， no reprint",
+  "copyright": "© WCG All rights reserved， no reprint",
   "privacyPolicy": "Privacy Policy",
   "termsAndConditions": "Terms and Conditions",
   "disputeSettlement": "Dispute disputeSettlement",
