--- a/src/i18n/locales/hk/footer.json
+++ b/src/i18n/locales/hk/footer.json
@@ -1,5 +1,5 @@
 {
-  "copyRight": "© WCG Markets Ltd版權所有，不得轉載",
+  "copyright": "© WCG Markets Ltd版權所有，不得轉載",
   "privacyPolicy": "隱私條款",
   "termsAndConditions": "條款細則",
   "disputeSettlement": "爭端處理",
