--- a/src/i18n/locales/id/footer.json
+++ b/src/i18n/locales/id/footer.json
@@ -1,5 +1,5 @@
 {
-  "copyRight": "© Seluruh hak cipta dilindungi Undang-Undang dan dilarang keras untuk menduplikasi seluruh isi materi di dalamnya",
+  "copyright": "© Seluruh hak cipta dilindungi Undang-Undang dan dilarang keras untuk menduplikasi seluruh isi materi di dalamnya",
   "privacyPolicy": "Kebijakan Privasi",
   "termsAndConditions": "Syarat dan Ketentuan",
   "disputeSettlement": "Penyelesaian Sengketa",
