--- a/src/i18n/locales/en/common.json
+++ b/src/i18n/locales/en/common.json
@@ -10,5 +10,5 @@
   "line": "Line",
   "clientPortal": "Client Portal",
   "downloadMT4": "Download MT4",
-  "top": "Top"
+  "top": "Back To Top"
 }
