--- a/src/i18n/locales/en/footer.json
+++ b/src/i18n/locales/en/footer.json
@@ -10,7 +10,7 @@
   "newbiesGettingStarted": "Newbies Getting Started",
   "getUSD": "Get USD 100,000 virtual funds for demo account",
   "demoAccount": "demo account",
-  "startRealFXTrading": "Start real FX trading",
+  "startRealFXTrading": "Start Real FX Trading",
   "aRealAccount": "a real account",
   "WCGIsABusinessBrand": "WCG is a business brand jointly shared by many companies, including：",
   "WCGMarketsLtdIsALimitedLiabilityCompany": "WCG Markets Ltd is a limited liability company registered under the International Business Company Law in Saint Vincent and the Grenadines. The company number is 26087 BC 2020. The registered address is: The Financial Services Centre Stoney Ground, Kingstown, St.Vincent & the Grenadines.",
