--- a/src/i18n/locales/id/common.json
+++ b/src/i18n/locales/id/common.json
@@ -4,7 +4,7 @@
   "usersCenter": "Pusat Pengguna",
   "iBCenter": "Pusat IB",
   "contactUs": "Contact us",
-  "telegram": "sambungan layanan",
+  "telegram": "Telegram",
   "online": "online",
   "whatsApp": "whatsApp",
   "line": "Line",
