--- a/src/i18n/locales/my/common.json
+++ b/src/i18n/locales/my/common.json
@@ -4,7 +4,7 @@
   "usersCenter": "Pusat pelanggan",
   "iBCenter": "Pusat Agen",
   "contactUs": "Contact us",
-  "telegram": "pelanggan pautan",
+  "telegram": "Telegram",
   "online": "online",
   "whatsApp": "whatsApp",
   "line": "Line",
