--- a/src/i18n/locales/vn/common.json
+++ b/src/i18n/locales/vn/common.json
@@ -4,7 +4,7 @@
   "usersCenter": "Trung tâm khách hàng",
   "iBCenter": "Trung tâm đại lý",
   "contactUs": "Contact us",
-  "telegram": "dịch vụ",
+  "telegram": "Telegram",
   "online": "online",
   "whatsApp": "whatsApp",
   "line": "Line",
