add favorite icon

--- a/src/i18n/locales/hk/common.json
+++ b/src/i18n/locales/hk/common.json
@@ -8,7 +8,7 @@
   "online": "線上客服",
   "whatsApp": "whatsApp",
   "line": "Line",
-  "clientPortal": "Client Portal",
-  "downloadMT4": "Download MT4",
-  "top": "回到頁首"
+  "clientPortal": "存取款登入",
+  "downloadMT4": "MT4下載",
+  "top": "回到頂部"
 }
