--- a/src/i18n/locales/hk/home.json
+++ b/src/i18n/locales/hk/home.json
@@ -10,7 +10,8 @@
   "theDepositAndWithdrawal": "資金存取簡單且無限制，簡化一般繁瑣出入金程序，讓您隨時隨地都能快速入金，出金快至二小時。",
   "fastPayment": "極速款項處理",
   "theLatestTechnology": "最新科技使稽核與開戶速度變得更加迅速。支付系統的目標在於成為：提供業界最快速之入款及出款服務的最新系統。",
-  "investInNewChannels": "投資新渠道，聚金在WCG",
+  "invest": "投資",
+  "inNewChannels": "新渠道，聚金在WCG",
   "professionalEquals": "用百分的認真，贏得百分的信心",
   "mobileTradingSystem": "移動交易系統",
   "WCGMobileTradingSystem": "WCG國際移動交易系統提供一種簡單方便的方法，以便客戶能夠在出行時進行交易，並立即對市場活動新聞和數據做出反應，從而實現機會的最大化。",
