--- a/src/i18n/locales/cn/home.json
+++ b/src/i18n/locales/cn/home.json
@@ -10,7 +10,8 @@
   "theDepositAndWithdrawal": "资金存取简单且无限制，简化一般繁琐出入金程序，让您随时随地都能快速入金，出金快至二小时。",
   "fastPayment": "极速款项处理",
   "theLatestTechnology": "最新科技使稽核与开户速度变得更加迅速。支付系统的目标在于成为：提供业界最快速之入款及出款服务的最新系统。",
-  "investInNewChannels": "投资新渠道，聚金在WCG",
+  "invest": "投资",
+  "inNewChannels": "新渠道，聚金在WCG",
   "professionalEquals": "用百分的认真，赢得百分的信心",
   "mobileTradingSystem": "移动交易系统",
   "WCGMobileTradingSystem": "WCG国际移动交易系统提供一种简单方便的方法，以便客户能够在出行时进行交易，并立即对市场活动新闻和数据做出反应，从而实现机会的最大化。",
