--- a/src/i18n/locales/sa/home.json
+++ b/src/i18n/locales/sa/home.json
@@ -10,7 +10,8 @@
   "theDepositAndWithdrawal": "The deposit and withdrawal of funds is simple and unrestricted， simplifying the complicated deposit and withdrawal procedures， allowing you to deposit and withdraw you money quickly at anytime， anywhere， as fast as two hours.",
   "fastPayment": "Fast payment processing",
   "theLatestTechnology": "The latest technology makes the review and account opening process faster. The goal of the payment system is to be the latest system that provides the fastest deposit and withdrawal services in the industry.",
-  "investInNewChannels": "Invest in new channels， make money in WCG",
+  "invest": "Invest ",
+  "inNewChannels": "in new channels， make money in WCG",
   "professionalEquals": "100% professional equals 100% confidence",
   "mobileTradingSystem": "Mobile Trading System",
   "WCGMobileTradingSystem": "WCG Mobile Trading System provides a simple and convenient method so that customers can trade while traveling and immediately react to instant market news and data， thereby maximizing trading opportunities.",
