--- a/src/i18n/locales/vn/footer.json
+++ b/src/i18n/locales/vn/footer.json
@@ -1,5 +1,5 @@
 {
-  "copyright": "© WCG All rights reserved， no reprint",
+  "copyright": "© WCG All rights reserved, no reprint",
   "privacyPolicy": "Privacy Policy",
   "termsAndConditions": "Terms and Conditions",
   "disputeSettlement": "Dispute disputeSettlement",
@@ -12,11 +12,11 @@
   "demoAccount": "demo account",
   "startRealFXTrading": "Start real FX trading",
   "aRealAccount": "a real account",
-  "WCGIsABusinessBrand": "WCG is a business brand jointly shared by many companies, including：",
+  "WCGIsABusinessBrand": "WCG is a business brand jointly shared by many companies, including:",
   "WCGMarketsLtdIsALimitedLiabilityCompany": "WCG Markets Ltd is a limited liability company registered under the International Business Company Law in Saint Vincent and the Grenadines. The company number is 26087 BC 2020. The registered address is: The Financial Services Centre Stoney Ground, Kingstown, St.Vincent & the Grenadines.",
   "WCGMarketsLtdIsRegulatedByTheFINTRAC": "WCG Markets Ltd is regulated by the FINTRAC. The MSB license number is M20282836. The registered address is: 150-10451 Shellbridge Way, Richmond BC V6X 2W8, Canada.",
-  "WenchuanGoldCompany": "Wenchuan Gold Company Limited is regulated by the Hong Kong Gold & Silver Exchange (CGSE). It is the No.12 A1 member unit. The registered address is: Flat D， 22/F， Tower B， Capital Tower， 38Wai Yip Street， Kowloon， Hong Kong.",
-  "WenchuanGlobalLtd": "Wenchuan Global Ltd is a limited liability company incorporated in the United Kingdom with the company number 11019948. The registered address is: WC1E 6HA， 5th Floor， 3 Gower Street， London， UK.",
-  "HighRiskInvestmentWarning": "High-risk investment warning: Contracts for Difference (CFD) are complex financial products， and their use of leveraged trading attributes is likely to cause rapid loss of principal， and you may be required to call for margin. Please understand the product principles of CFDs and consider whether you can withstand this risk before entering the market. The past prices and performance of all financial derivatives instruments do not guarantee or represent future trends. Such financial products are not suitable for all investors. Please be sure to fully understand all potential risks before entering the market and seek independent advice when necessary.",
-  "restrictedAreas": "Restricted areas: WCG International Co.， Ltd.'s website information does not aimed at targeting residents of British Columbia， Quebec and Saskatchewan， the Democratic People's Republic of Korea (North Korea)， Iran， the United States and Hong Kong; And not to send or use the information to people in countries or jurisdictions where the publication or use ofthis information violates local laws and regulations."
+  "WenchuanGoldCompany": "Wenchuan Gold Company Limited is regulated by the Hong Kong Gold & Silver Exchange (CGSE). It is the No.12 A1 member unit. The registered address is: Flat D, 22/F, Tower B, Capital Tower, 38Wai Yip Street, Kowloon, Hong Kong.",
+  "WenchuanGlobalLtd": "Wenchuan Global Ltd is a limited liability company incorporated in the United Kingdom with the company number 11019948. The registered address is: WC1E 6HA, 5th Floor, 3 Gower Street, London, UK.",
+  "HighRiskInvestmentWarning": "High-risk investment warning: Contracts for Difference (CFD) are complex financial products, and their use of leveraged trading attributes is likely to cause rapid loss of principal, and you may be required to call for margin. Please understand the product principles of CFDs and consider whether you can withstand this risk before entering the market. The past prices and performance of all financial derivatives instruments do not guarantee or represent future trends. Such financial products are not suitable for all investors. Please be sure to fully understand all potential risks before entering the market and seek independent advice when necessary.",
+  "restrictedAreas": "Restricted areas: WCG International Co., Ltd.'s website information does not aimed at targeting residents of British Columbia, Quebec and Saskatchewan, the Democratic People's Republic of Korea (North Korea), Iran, the United States and Hong Kong; And not to send or use the information to people in countries or jurisdictions where the publication or use ofthis information violates local laws and regulations."
 }
