--- a/src/i18n/locales/vn/home.json
+++ b/src/i18n/locales/vn/home.json
@@ -1,31 +1,31 @@
 {
-  "diversifiedProducts": "Diversified products，to meet your investment needs",
-  "strongAdvantages": "Strong advantages， to ensure the safety of your transactions",
-  "highLiquidity": "High liquidity， significant spreads discount， low cost and high return",
-  "safetyOfFunds": "Safety of funds， rapid deposit and withdrawal process， smooth system， round-the-clock service",
-  "askProductsNow": "Ask Products Now",
-  "safeAndSecureDepository": "Safe and secure depository",
-  "customerFunds": "Customer funds are deposited separately and reviewed by regulatory agencies. With ten years of financial professional risk control experience， each single transaction is strictly reviewed to ensure the safety of customer funds.",
-  "efficientDeposit": "Efficient deposit and withdrawal of funds",
-  "theDepositAndWithdrawal": "The deposit and withdrawal of funds is simple and unrestricted， simplifying the complicated deposit and withdrawal procedures， allowing you to deposit and withdraw you money quickly at anytime， anywhere， as fast as two hours.",
-  "fastPayment": "Fast payment processing",
-  "theLatestTechnology": "The latest technology makes the review and account opening process faster. The goal of the payment system is to be the latest system that provides the fastest deposit and withdrawal services in the industry.",
-  "invest": "Invest ",
-  "inNewChannels": "in new channels， make money in WCG",
-  "professionalEquals": "100% professional equals 100% confidence",
-  "mobileTradingSystem": "Mobile Trading System",
-  "WCGMobileTradingSystem": "WCG Mobile Trading System provides a simple and convenient method so that customers can trade while traveling and immediately react to instant market news and data， thereby maximizing trading opportunities.",
-  "brandReputation": "Brand reputation and customer service team led by famous market tutors",
-  "withFormalBusinessLicense": "With formal business license in the international financial market， which is protected by the laws of Hong Kong， China and the international regulations of St. Vincent. It is the Internet \"the most trusted precious metal broker for investors\".",
-  "preciousMetalsContract": "Precious Metals Contract",
-  "timesLeverage": "100-200 times leverage，low-cost and high-return，global 24-hours trading，can make profit by both buy and sell。London Gold & London Silver is a trading product provided by the International Financial Futures Exchange， with simple trading rules， T+0operation， short fund settlement time， and fast and safe online electronic transactions.",
-  "accountOpening": "Account Opening",
-  "realTimeQuotation": "Real-time quotation of our trading products",
-  "aVarietyOfProfessional": "A variety of professional chart analysis tools and technical indicators. You can freely set your own technical indicator parameters and time frame.",
-  "investmentProductsAcross": "Investment products across the globe",
-  "includingMoreThan": "Including more than a hundred investment products such as margin FX， precious metals， crude oil， futures， crypto currencies， stocks， etc.",
-  "connectingTo": "Connecting to thousands of servers",
-  "automatedProcess": "Automated process can effectively improve the speed and accuracy of fund transfer， so that you can enjoy the best deposit and withdrawal experience.",
-  "downloadImmediately": "Download immediately",
-  "fastExecutionOfEachOrder": "Fast execution of each order， minimum slippage， high liquidity， high stability， high transparency"
+  "diversifiedProducts": "Sản phẩm đa dạng, đáp ứng nhu cầu đầu tư của bạn",
+  "strongAdvantages": "Ưu điểm mạnh mẽ, bảo vệ giao dịch của bạn an toàn",
+  "highLiquidity": "Tính thanh khoản cao, chiết khấu chênh lệch đáng kể, chi phí thấp và lợi nhuận cao",
+  "safetyOfFunds": "Nguồn tiền an toàn, quy trình gửi và rút tiền nhanh chóng, hệ thống thông suốt, dịch vụ cả ngày đêm",
+  "askProductsNow": "hỏi sản phẩm ngay bây giờ",
+  "safeAndSecureDepository": "Lưu ký an toàn và bảo mật",
+  "customerFunds": "Tiền của khách hàng được gửi riêng và được các cơ quan quản lý xem xét. Với mười năm kinh nghiệm kiểm soát rủi ro tài chính chuyên nghiệp, mỗi giao dịch đơn lẻ đều được xem xét nghiêm ngặt để đảm bảo an toàn cho quỹ của khách hàng.",
+  "efficientDeposit": "Gửi và rút tiền hiệu quả",
+  "theDepositAndWithdrawal": "Việc gửi và rút tiền rất đơn giản mà không bị giới hạn, đơn giản hóa các thủ tục gửi và rút tiền phức tạp, cho phép bạn gửi và rút tiền nhanh chóng mọi lúc, mọi nơi, chỉ trong hai giờ.",
+  "fastPayment": "Xử lý thanh toán nhanh chóng",
+  "theLatestTechnology": "Công nghệ mới nhất giúp quá trình xem xét và mở tài khoản nhanh hơn. Mục tiêu của hệ thống thanh toán là trở thành hệ thống mới nhất cung cấp dịch vụ gửi và rúttiền nhanh nhất trong ngành.",
+  "invest": "Đầu tư ",
+  "inNewChannels": "vào các kênh mới, kiếm tiền trong WCG",
+  "professionalEquals": "100% chuyên nghiệp bằng 100% tự tin",
+  "mobileTradingSystem": "Hệ thống giao dịch di động",
+  "WCGMobileTradingSystem": "Hệ thống Giao dịch Di động WCG cung cấp một phương thức đơn giản và thuận tiện để khách hàng có thể giao dịch khi đang di chuyển và phản ứng ngay lập tức với các tin tức và dữ liệu thị trường tức thì, từ đó tối đa hóa cơ hội giao dịch.",
+  "brandReputation": "Uy tín thương hiệu và đội ngũ dịch vụ khách hàng do các chuyên gia nổi tiếng trên thị trường dẫn đầu",
+  "withFormalBusinessLicense": "Với giấy phép kinh doanh chính thức trên thị trường tài chính quốc tế, được bảo vệ bởi luật pháp Hồng Kông, Trung Quốc và các quy định quốc tế của St.Vincent. Đó là mạng lưới \"nhà môi giới kim loại quý đáng tin cậy nhất cho các nhà đầu tư\".",
+  "preciousMetalsContract": "Hợp đồng kim loại quý",
+  "timesLeverage": "Đòn bẩy 100-200 lần, chi phí thấp và lợi nhuận cao, giao dịch toàn cầu trong 24 giờ, có thể kiếm lợi nhuận bằng cách mua và bán. London Gold & London Silver là sản phẩm giao dịch được cung cấp bởi International Financial Futures Exchange, với các quy tắc giao dịch đơn giản, hoạt động T + 0, thời gian giải quyết quỹ ngắn và giao dịch điện tử trực tuyến nhanh chóng và an toàn.",
+  "accountOpening": "Mở tài khoản",
+  "realTimeQuotation": "Báo giá thời gian thực của các sản phẩm giao dịch",
+  "aVarietyOfProfessional": "Một loạt các công cụ phân tích biểu đồ chuyên nghiệp và các chỉ báo kỹ thuật. Bạn có thể tự do thiết lập các thông số chỉ báo kỹ thuật và khung thời gian của riêng mình.",
+  "investmentProductsAcross": "Sản phẩm đầu tư trên toàn cầu",
+  "includingMoreThan": "Bao gồm hơn một trăm sản phẩm đầu tư như ngoại hối ký quỹ, kim loại quý, dầu thô, hợp đồng tương lai, tiền điện tử, cổ phiếu, v.v.",
+  "connectingTo": "Kết nối với hàng nghìn máy chủ",
+  "automatedProcess": "Quy trình tự động có thể cải thiện hiệu quả tốc độ và độ chính xác của việc chuyển tiền, để bạn có thể tận hưởng trải nghiệm gửi và rút tiền tốt nhất.",
+  "downloadImmediately": "Tải xuống tức thì",
+  "fastExecutionOfEachOrder": "Thực hiện nhanh từng lệnh, trượt giá tối thiểu, thanh khoản cao, ổn định cao, độ minh bạch cao"
 }
