fix copyright style, correct i18n

--- a/src/i18n/locales/cn/common.json
+++ b/src/i18n/locales/cn/common.json
@@ -6,7 +6,7 @@
   "contactUs": "联系我们",
   "telegram": "Telegram",
   "online": "在线客服",
-  "whatsApp": "whatsApp",
+  "whatsApp": "WhatsApp",
   "line": "Line",
   "clientPortal": "存取款登陆",
   "downloadMT4": "MT4下载",
