--- a/src/i18n/locales/en/footer.json
+++ b/src/i18n/locales/en/footer.json
@@ -2,10 +2,10 @@
   "copyright": "© WCG All rights reserved, no reprint",
   "privacyPolicy": "Privacy Policy",
   "termsAndConditions": "Terms and Conditions",
-  "disputeSettlement": "Dispute disputeSettlement",
+  "disputeSettlement": "Dispute Settlement",
   "riskDisclaimer": "Risk Disclaimer",
   "followUs": "Follow us",
-  "provideYouWith": "Provide you with high-quality investment services with the most professional experience inthe industry",
+  "provideYouWith": "Provide you with high-quality investment services with the most professional experience in the industry",
   "allTradesInvolveRisks": "Risk policy: All trades involve risks. Your trading loss may be greater than your total deposit.",
   "newbiesGettingStarted": "Newbies Getting Started",
   "getUSD": "Get USD 100,000 virtual funds for demo account",
