--- a/src/i18n/locales/hk/common.json
+++ b/src/i18n/locales/hk/common.json
@@ -6,7 +6,7 @@
   "contactUs": "聯繫我們",
   "telegram": "Telegram",
   "online": "線上客服",
-  "whatsApp": "whatsApp",
+  "whatsApp": "WhatsApp",
   "line": "Line",
   "clientPortal": "存取款登入",
   "downloadMT4": "MT4下載",
