--- a/src/i18n/locales/id/footer.json
+++ b/src/i18n/locales/id/footer.json
@@ -1,5 +1,5 @@
 {
-  "copyright": "© Seluruh hak cipta dilindungi Undang-Undang dan dilarang keras untuk menduplikasi seluruh isi materi di dalamnya",
+  "copyright": "© WCG Hak cipta dilindungi undang-undang tidak ada cetak ulang",
   "privacyPolicy": "Kebijakan Privasi",
   "termsAndConditions": "Syarat dan Ketentuan",
   "disputeSettlement": "Penyelesaian Sengketa",
@@ -8,15 +8,15 @@
   "provideYouWith": "Memberi Anda layanan investasi berkualitas tinggi dengan pengalaman paling profesional di industrinya",
   "allTradesInvolveRisks": "Semua perdagangan melibatkan risiko. Kerugian dalam perdagangan Anda mungkin lebih besar dari total deposit Anda.Kebijakan resiko",
   "newbiesGettingStarted": "Cara Pemula Memulai",
-  "getUSD": "Dapatkan dana virtual USD 100,000 untuk akun demo",
+  "getUSD": "Dapatkan dana virtual USD 100.000 untuk akun demo",
   "demoAccount": "Buka akun demo",
   "startRealFXTrading": "Mulai perdagangan FX yang riil",
   "aRealAccount": "Buka akun real",
-  "WCGIsABusinessBrand": "WCG is a business brand jointly shared by many companies, including:",
-  "WCGMarketsLtdIsALimitedLiabilityCompany": "WCG Markets Ltd is a limited liability company registered under the International Business Company Law in Saint Vincent and the Grenadines. The company number is 26087 BC 2020. The registered address is: The Financial Services Centre Stoney Ground, Kingstown, St.Vincent & the Grenadines.",
-  "WCGMarketsLtdIsRegulatedByTheFINTRAC": "WCG Markets Ltd is regulated by the FINTRAC. The MSB license number is M20282836. The registered address is: 150-10451 Shellbridge Way, Richmond BC V6X 2W8, Canada.",
-  "WenchuanGoldCompany": "Wenchuan Gold Company Limited is regulated by the Hong Kong Gold & Silver Exchange (CGSE). It is the No.12 A1 member unit. The registered address is: Flat D, 22/F, Tower B, Capital Tower, 38Wai Yip Street, Kowloon, Hong Kong.",
-  "WenchuanGlobalLtd": "Wenchuan Global Ltd is a limited liability company incorporated in the United Kingdom with the company number 11019948. The registered address is: WC1E 6HA, 5th Floor, 3 Gower Street, London, UK.",
-  "HighRiskInvestmentWarning": "Peringatan investasi berisiko tinggi: Contracts for Difference (CFD) adalah produk keuangan yang kompleks,dan penggunaan atribut perdagangan dengan leverage kemungkinan besar akan menyebabkan hilangnya pokok dana deposit dengan cepat, dan Anda mungkin diminta untuk penambahan margin. Harap pahami prinsip produk CFD dan pertimbangkan apakah Anda dapat menahan risiko ini sebelum memasuki pasar. Harga dan kinerja masa lalu dari semua instrumen derivatif keuangan tidak menjamin atau mewakili trend masadepan. Produk keuangan semacam itu tidak cocok untuk semua investor. Harap pastikan untuk memahami sepenuhnya semua potensi risiko sebelum memasuki pasar dan mencari nasihat independen bila diperlukan.",
-  "restrictedAreas": "Area terlarang: Informasi situs web WCG International Ltd. tidak ditujukan untuk menargetkan penduduk British Columbia, Quebec dan Saskatchewan, Republik Demokratik Rakyat Korea (KoreaUtara), Iran, Amerika Serikat dan Hong Kong; Dan tidak untuk mengirim atau menggunakan informasi kepada orang-orang di negara atau yurisdiksi di mana publikasi atau penggunaan informasi ini melanggar hukum dan peraturan setempat."
+  "WCGIsABusinessBrand": "WCG adalah merek bisnis yang dimiliki bersama oleh banyak perusahaan, termasuk:",
+  "WCGMarketsLtdIsALimitedLiabilityCompany": "WCG Markets Ltd adalah perseroan terbatas yang terdaftar di bawah Hukum Perusahaan Bisnis Internasional di Saint Vincent dan Grenadines. Nomor perusahaan adalah 26087 SM 2020. Alamat terdaftar adalah: The Financial Services Center Stoney Ground, Kingstown, St.Vincent & the Grenadines.",
+  "WCGMarketsLtdIsRegulatedByTheFINTRAC": "WCG Markets Ltd diatur oleh FINTRAC. Nomor lisensi MSB adalah M20282836. Alamat terdaftar adalah: 150-10451 Shellbridge Way, Richmond BC V6X 2W8, Kanada.",
+  "WenchuanGoldCompany": "Wenchuan Gold Company Limited diatur oleh Hong Kong Gold & Silver Exchange (CGSE). Ini adalah unit anggota No.12 A1. Alamat terdaftar adalah: Flat D, 22/F, Tower B, Capital Tower, 38Wai Yip Street, Kowloon, Hong Kong.",
+  "WenchuanGlobalLtd": "Wenchuan Global Ltd adalah perseroan terbatas yang didirikan di Inggris dengan nomor perusahaan 11019948. Alamat terdaftar adalah: WC1E 6HA, Lantai 5, 3 Gower Street, London, Inggris.",
+  "HighRiskInvestmentWarning": "Peringatan investasi berisiko tinggi: Contracts for Difference (CFD) adalah produk keuangan yang kompleks,dan penggunaan atribut perdagangan dengan leverage kemungkinan besar akan menyebabkan hilangnya pokok dana deposit dengan cepat, dan Anda mungkin diminta untuk penambahan margin. Harap pahami prinsip produk CFD dan pertimbangkan apakah Anda dapat menahan risiko ini sebelum memasuki pasar. Harga dan kinerja masa lalu dari semua instrumen derivatif keuangan tidak menjamin atau mewakili trend masa depan. Produk keuangan semacam itu tidak cocok untuk semua investor. Harap pastikan untuk memahami sepenuhnya semua potensi risiko sebelum memasuki pasar dan mencari nasihat independen bila diperlukan.",
+  "restrictedAreas": "Area terlarang: Informasi situs web WCG International Ltd. tidak ditujukan untuk menargetkan penduduk British Columbia, Quebec dan Saskatchewan, Republik Demokratik Rakyat Korea (Korea Utara), Iran, Amerika Serikat dan Hong Kong; Dan tidak untuk mengirim atau menggunakan informasi kepada orang-orang di negara atau yurisdiksi di mana publikasi atau penggunaan informasi ini melanggar hukum dan peraturan setempat."
 }
