--- a/src/i18n/locales/my/common.json
+++ b/src/i18n/locales/my/common.json
@@ -3,12 +3,12 @@
   "openDemoAccount": "Pusat Pengguna",
   "usersCenter": "Pusat pelanggan",
   "iBCenter": "Pusat Agen",
-  "contactUs": "Contact us",
+  "contactUs": "Hubungi Kami",
   "telegram": "Telegram",
-  "online": "online",
-  "whatsApp": "whatsApp",
+  "online": "dalam talian",
+  "whatsApp": "WhatsApp",
   "line": "Line",
-  "clientPortal": "Client Portal",
-  "downloadMT4": "Download MT4",
-  "top": "Top"
+  "clientPortal": "daftar",
+  "downloadMT4": "Muat turun MT4",
+  "top": "kembali ke atas"
 }
