--- a/src/i18n/locales/vn/common.json
+++ b/src/i18n/locales/vn/common.json
@@ -3,12 +3,12 @@
   "openDemoAccount": "Mở tài khoản demo",
   "usersCenter": "Trung tâm khách hàng",
   "iBCenter": "Trung tâm đại lý",
-  "contactUs": "Contact us",
+  "contactUs": "Liên hệ chúng tôi",
   "telegram": "Telegram",
-  "online": "online",
-  "whatsApp": "whatsApp",
+  "online": "Trực tuyến",
+  "whatsApp": "WhatsApp",
   "line": "Line",
-  "clientPortal": "Client Portal",
-  "downloadMT4": "Download MT4",
-  "top": "Top"
+  "clientPortal": "Đăng ký",
+  "downloadMT4": "Tải xuống MT4",
+  "top": "trở lại đầu trang"
 }
