--- a/src/i18n/locales/sa/footer.json
+++ b/src/i18n/locales/sa/footer.json
@@ -1,22 +1,22 @@
 {
-  "copyright": "© WCG All rights reserved, no reprint",
-  "privacyPolicy": "Privacy Policy",
-  "termsAndConditions": "Terms and Conditions",
-  "disputeSettlement": "Dispute disputeSettlement",
-  "riskDisclaimer": "Risk Disclaimer",
-  "followUs": "Follow us",
-  "provideYouWith": "Provide you with high-quality investment services with the most professional experience inthe industry",
-  "allTradesInvolveRisks": "Risk policy: All trades involve risks. Your trading loss may be greater than your total deposit.",
-  "newbiesGettingStarted": "Newbies Getting Started",
-  "getUSD": "Get USD 100,000 virtual funds for demo account",
-  "demoAccount": "demo account",
-  "startRealFXTrading": "Start real FX trading",
-  "aRealAccount": "a real account",
-  "WCGIsABusinessBrand": "WCG is a business brand jointly shared by many companies, including:",
-  "WCGMarketsLtdIsALimitedLiabilityCompany": "WCG Markets Ltd is a limited liability company registered under the International Business Company Law in Saint Vincent and the Grenadines. The company number is 26087 BC 2020. The registered address is: The Financial Services Centre Stoney Ground, Kingstown, St.Vincent & the Grenadines.",
-  "WCGMarketsLtdIsRegulatedByTheFINTRAC": "WCG Markets Ltd is regulated by the FINTRAC. The MSB license number is M20282836. The registered address is: 150-10451 Shellbridge Way, Richmond BC V6X 2W8, Canada.",
-  "WenchuanGoldCompany": "Wenchuan Gold Company Limited is regulated by the Hong Kong Gold & Silver Exchange (CGSE). It is the No.12 A1 member unit. The registered address is: Flat D, 22/F, Tower B, Capital Tower, 38Wai Yip Street, Kowloon, Hong Kong.",
-  "WenchuanGlobalLtd": "Wenchuan Global Ltd is a limited liability company incorporated in the United Kingdom with the company number 11019948. The registered address is: WC1E 6HA, 5th Floor, 3 Gower Street, London, UK.",
-  "HighRiskInvestmentWarning": "High-risk investment warning: Contracts for Difference (CFD) are complex financial products, and their use of leveraged trading attributes is likely to cause rapid loss of principal, and you may be required to call for margin. Please understand the product principles of CFDs and consider whether you can withstand this risk before entering the market. The past prices and performance of all financial derivatives instruments do not guarantee or represent future trends. Such financial products are not suitable for all investors. Please be sure to fully understand all potential risks before entering the market and seek independent advice when necessary.",
-  "restrictedAreas": "Restricted areas: WCG International Co., Ltd.'s website information does not aimed at targeting residents of British Columbia, Quebec and Saskatchewan, the Democratic People's Republic of Korea (North Korea), Iran, the United States and Hong Kong; And not to send or use the information to people in countries or jurisdictions where the publication or use ofthis information violates local laws and regulations."
+  "copyright": "© WCG جميع الحقوق محفوظة ، لا إعادة طبع",
+  "privacyPolicy": "سياسة الخصوصية",
+  "termsAndConditions": "الأحكام والشروط",
+  "disputeSettlement": "تسوية المنازعات",
+  "riskDisclaimer": "إخلاء المسؤولية عن المخاطر",
+  "followUs": "تابعنا",
+  "provideYouWith": "نوفر لك خدمات استثمارية عالية الجودة مع أكثر الخبرات المهنية في الصناعة",
+  "allTradesInvolveRisks": "سياسة المخاطر: جميع الصفقات تنطوي على مخاطر. قد تكون خسارتك في التداول أكبر من إجمالي إيداعك.",
+  "newbiesGettingStarted": "نوبي الشروع في العمل",
+  "getUSD": "احصل على 100،000 دولار أمريكي من الأموال الافتراضية للحساب التجريبي",
+  "demoAccount": "حساب تجريبي",
+  "startRealFXTrading": "ابدأ تداول العملات الأجنبية الحقيقي",
+  "aRealAccount": "حساب حقيقي",
+  "WCGIsABusinessBrand": "WCG هي علامة تجارية مشتركة بين العديد من الشركات ، بما في ذلك:",
+  "WCGMarketsLtdIsALimitedLiabilityCompany": "WCG Markets Ltd هي شركة ذات مسؤولية محدودة مسجلة بموجب قانون الشركات التجارية الدولية في سانت فنسنت وجزر غرينادين. رقم الشركة 26087 قبل الميلاد 2020. العنوان المسجل هو: مركز الخدمات المالية ستوني جراوند ، كينجستاون ، سانت فنسنت وجزر غرينادين.",
+  "WCGMarketsLtdIsRegulatedByTheFINTRAC": "تخضع WCG Markets Ltd للتنظيم من قبل FINTRAC. رقم ترخيص MSB هو M20282836. العنوان المسجل هو: 150-10451 Shellbridge Way، Richmond BC V6X 2W8، Canada.",
+  "WenchuanGoldCompany": "شركة Wenchuan Gold Company المحدودة مرخصة من بورصة هونغ كونغ للذهب والفضة (CGSE). إنها الوحدة العضو رقم 12 A1. العنوان المسجل هو: Flat D، 22 / F، Tower B، Capital Tower، 38Wai Yip Street، Kowloon، Hong Kong.",
+  "WenchuanGlobalLtd": "Wenchuan Global Ltd هي شركة ذات مسئولية محدودة تأسست في المملكة المتحدة برقم الشركة 11019948. العنوان المسجل هو: WC1E 6HA، 5th Floor، 3 Gower Street، London، UK.",
+  "HighRiskInvestmentWarning": "تحذير الاستثمار عالي المخاطر: العقود مقابل الفروقات (CFD) هي منتجات مالية معقدة ، ومن المحتمل أن يؤدي استخدامها لسمات التداول بالرافعة المالية إلى خسارة سريعة لرأس المال ، وقد يُطلب منك طلب الهامش. يرجى فهم مبادئ المنتجات الخاصة بالعقود مقابل الفروقات والنظر فيما إذا كان بإمكانك تحمل هذه المخاطر قبل دخول السوق. لا تضمن الأسعار والأداء السابق لجميع أدوات المشتقات المالية أو تمثل الاتجاهات المستقبلية. هذه المنتجات المالية ليست مناسبة لجميع المستثمرين. يرجى التأكد من فهمك الكامل لجميع المخاطر المحتملة قبل دخول السوق وطلب المشورة المستقلة عند الضرورة.",
+  "restrictedAreas": "المناطق المحظورة: لا تهدف معلومات موقع WCG International Co.، Ltd. إلى استهداف سكان كولومبيا البريطانية وكيبيك وساسكاتشوان وجمهورية كوريا الديمقراطية الشعبية (كوريا الشمالية) وإيران والولايات المتحدة وهونج كونج ؛ وعدم إرسال المعلومات أو استخدامها لأشخاص في دول أو نطاقات قضائية ينتهك فيها نشر أو استخدام هذه المعلومات القوانين واللوائح المحلية."
 }
