--- a/src/i18n/locales/sa/home.json
+++ b/src/i18n/locales/sa/home.json
@@ -14,11 +14,11 @@
   "inNewChannels": "في قنوات جديدة ， اربح المال في WCG",
   "professionalEquals": "٪100مهنية تساوي100٪ ثقة",
   "mobileTradingSystem": "نظام التداول للهاتف المحمول",
-  "WCGMobileTradingSystem": "يوفر نظام التداول للهاتف المحمول من WCG طريقة بسيطة ومريحة بحيث يمكن للعملاء التداول أثناءالسفر والتنقل والرد الفوري على أخبار وبيانات السوق الفورية وبالتالي زيادة فرص التداول إلىأقصى حد",
+  "WCGMobileTradingSystem": "يوفر نظام التداول للهاتف المحمول من WCG طريقة بسيطة ومريحة بحيث يمكن للعملاء التداول أثناء السفر والتنقل والرد الفوري على أخبار وبيانات السوق الفورية وبالتالي زيادة فرص التداول إلى أقصى حد",
   "brandReputation": ".تتم إدارة سمعة العلامة التجارية وفريق خدمة العملاء بواسطة معلمين مشهورين في السوق",
-  "withFormalBusinessLicense": ".مع حيازتها لرخصة تجارية رسمية في السوق المالية الدولية، والتي تحميها قوانين هونغ كونغ والصين واللوائح الدولية لسانت فنسنت. فإنها تعتبر\"الوسيط الأكثر ثقة للمستثمرين في المعادنالثمينة\" على الانترنيت",
+  "withFormalBusinessLicense": ".مع حيازتها لرخصة تجارية رسمية في السوق المالية الدولية، والتي تحميها قوانين هونغ كونغ، والصين واللوائح الدولية لسانت فنسنت.   فإنها تعتبر\"الوسيط الأكثر ثقة للمستثمرين في المعادن الثمينة\" على الانترنيت",
   "preciousMetalsContract": "عقود المعادن الثمينة",
-  "timesLeverage": ".بفضل الرافعة المالية التي تتراوح قيمتها ما بين100الى200مرة، والتداول العالمي منخفض التكلفة وذو العائد المرتفع على مدار24ساعة، يمكنك تحقيق الربح عن طريق الشراء والبيع. إن London Gold & London Silver。 هو منتج تداول مقدم من البورصة المالية الدولية للعقود الآجلة، مع قواعد تداول بسيطة، وعملية T+0 ، ووقتقصير لتسوية الأموال، ومعاملات إلكترونية سريعة وآمنة عبر الإنترنت",
+  "timesLeverage": ".بفضل الرافعة المالية التي تتراوح قيمتها ما بين 100 الى 200 مرة، والتداول العالمي منخفض التكلفة وذو العائد المرتفع على مدار 24 ساعة، يمكنك تحقيق الربح عن طريق الشراء والبيع. إن London Gold & London Silver。 هو منتج تداول مقدم من البورصة المالية الدولية للعقود الآجلة، مع قواعد تداول بسيطة، وعملية T+0 ، ووقت قصير لتسوية الأموال، ومعاملات إلكترونية سريعة وآمنة عبر الإنترنت",
   "accountOpening": "فتح الحساب",
   "realTimeQuotation": "عرض أسعار فوري في الوقت الفعلي لمنتجاتنا التجارية",
   "aVarietyOfProfessional": "مجموعة متنوعة من الأدوات الاحترافية لتحليل الرسوم البيانية والمؤشرات الفنية. يمكنك تعيين معلمات المؤشر الفني والإطار الزمني الخاصة بك بحرية",
@@ -26,6 +26,6 @@
   "includingMoreThan": ".بما في ذلك أكثر من مائة منتج استثماري مثل تداول هامش الفوركس، والمعادن الثمينة، والنفط الخام، والعقود الآجلة، والعملات المشفرة، والأسهم، وما إلى ذلك",
   "connectingTo": "الاتصال بآلاف الخوادم",
   "automatedProcess": ".يمكن أن تحسن العملية الآلية من سرعة ودقة تحويل الأموال بشكل فعال، حيث يمكنك الاستمتاع بأفضلتجربة للإيداع والسحب",
-  "downloadImmediately": "قم بالتحميل على الفور",
+  "downloadImmediately": "قم بالتحميل على الفور ",
   "fastExecutionOfEachOrder": "تنفيذ سريع لكل أمر ، حد أدنى من انزلاق الأسعار، سيولة عالية، إستقرار عالي، شفافية عالية"
 }
